game.css
body {
  margin: 0;
  padding: 0;
}

#board {
  width: 100vw;
  height: 100vh;
  background-image: url("justin-r-background1a1.jpg");
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  overflow: hidden;
}

#player {
  background-image: url("ptitbonhomme.jpg");
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: no-repeat;
  background-size: contain;
  background-color: rgb(0, 0, 0);
  position: absolute;
}

.obstacle {
  background-image: url("spikewall.jpg");
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgb(110, 28, 110);
  position: absolute;
}
.ennemy {
  background-image: url("mechantpasgentil.jpg");
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: no-repeat;
  background-size: contain;
  background-color: rgb(184, 19, 19);
  position: absolute;
}

.projectile {
  background-color: rgb(224, 226, 86);
  position: absolute;
}
.castle {
  background-image: url("chatal.png");
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: no-repeat;
  background-size: cover;
  background-color: rgb(87, 87, 87);
  position: absolute;
}

#page-gameover {
  width: 100vw;
  height: 100vh;
  background-image: url("lost.png");
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  overflow: hidden;
  text-align: center;
  background-color: rgb(216, 197, 232);

  text-align: center;
  background-color: rgb(216, 197, 232);
}
#page-winning {
  width: 100vw;
  height: 100vh;
  background-image: url("xiw72p8nt8q81.webp");
  background-position-x: 0;
  background-position-y: 0;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  overflow: hidden;
  text-align: center;
  background-color: rgb(216, 197, 232);
}

.playAgain {
  font-size: 5em;
}

